[tool.poetry]
name = "microtuner"
version = "0.1.0"
description = "Fast fine-tuning of small language models using Modal and Unsloth"
authors = ["Saurav Panda <sgp65@cornell.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
modal = "0.73.0"
huggingface-hub = "^0.28.1"
hf-transfer = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
